# Roli

./: .gitignore  Makefile  README.md  plugin.json  test.mk
composites/: MidiProcessor.h  README.md
src/: MidiIO.cpp  MidiIO.hpp  MyModule.cpp  QuadMidiToCV.cpp  Roli.cpp  Roli.hpp  Seaboard.cpp
test/: CMakeCache.txt  CMakeLists.txt  ExtremeTester.h  Makefile  README.md  asserts.h  cmake_install.cmake  main.cpp  roliTest  roliTest.cpp  rolitest.cpp
test/include/: gtest.h
